# pyctorial

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.cfg
src/pyctorial/: __init__.py  cli.py  io.py
src/pyctorial.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/pyctorial/filters/: __init__.py  halftone.py
src/pyctorial/generate/: __init__.py  gradients.py  shapes.py
src/pyctorial/transforms/: __init__.py  slice.py  stretching.py
