[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyctorial"
version = "0.1.0"
description = "Python tools for generating patterns and manipulating images"
authors = [{name="Matthew Lundeen"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pillow"
]

[project.scripts]
pyctorial = "pyctorial.cli:main"

[tool.setuptools.packages.find]
where = ["src"]