[metadata]
name = pyctorial
version = 0.1.1
author = Matthew Lundeen
author_email = matthewlundeen25@gmail.com
description = A simple image processing library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/decentishdev/pyctorial
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7