[metadata]
name = pyctorial
version = 0.1.3
author = Matthew Lundeen
author_email = matthewlundeen25@gmail.com
description = Python tools for generating patterns and manipulating images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/decentishdev/pyctorial
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7